# OpenGlPolygonKotlin

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/inanna/openglpolygonkotlin/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  rectangle.cpp  triangulate.cpp
app/src/main/cpp/Includes/: esUtil.h  triangulate.h
app/src/main/java/com/inanna/openglpolygonkotlin/: MainActivity.kt  PolygonJNI.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/inanna/openglpolygonkotlin/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
